--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "{DB_CONNECTION}"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
