--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "{DB_CONNECTION}"
+    "DefaultConnection": "Server={DB_SERVER};Database={DB_NAME};trusted_connection=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
