service for generating token

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server={DB_SERVER};Database={DB_NAME};trusted_connection=true;TrustServerCertificate=true;"
   },
+  "AppSettings": {
+    "Token":  "{JWT_SECRET}"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
