using Auth in Program.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server={DB_SERVER};Database={DB_NAME};trusted_connection=true;TrustServerCertificate=true;"
   },
+  "JwtSettings": {
+    "Issuer": "alojine",
+    "Audience": "Users",
+    "Key": "{JWT_SECRET}"
+  },
   "AppSettings": {
     "Token":  "{JWT_SECRET}"
   },
