migrating to mysql

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server={DB_SERVER};Database={DB_NAME};trusted_connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server={DB_SERVER};Database={DB_NAME};User={DB_USER};Password={DB_PASSWORD};Port=3306;allowPublicKeyRetrieval=true"
   },
   "JwtSettings": {
     "Issuer": "alojine",
