Removed unused code Fixed auth

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,8 @@
   "JwtSettings": {
     "Issuer": "alojine",
     "Audience": "Users",
-    "Key": "{JWT_SECRET}"
+    "Key": "{JWT_SECRET}",
+    "Expiration": 2
   },
   "AppSettings": {
     "Token":  "{JWT_SECRET}"
